
=======================================================
            WanT code:  Log of Changes 
=======================================================

13 Jan 2006      kpt interpolation added in transport calculation. (AF & BB)

10 Jan 2006      IOTK updated to today's CVS version (development head). (AF)

02 Jan 2006      Polarization calculation added to wannier.x : related data added.
                 bug fix in disentangle.x and wannier.x: assume_ncpp was not
                 properly working. Stdout of get_points.f90 routine updated. (AF)

28 Dec 2005      Small changes in the output printed by summary routine. (AF)

16 Dec 2005      Small changes in disentangle and wannier output fmts (check purpose). 
                 (AF)

-------------------------------------------------
Date: 13 Dec 2005    Version: WanT-2.0.0
-------------------------------------------------

13 Dec 2005      README.doc file updated; small corrections in the manual.(BB)
                 manual updates. (AF) (AC)

12 Dec 2005      README.input file updated; input for blc2wan.x added in the 
                 manual (BB). Further changes in the manual (AF).

09 Dec 2005      README files in tests upgraded (BB).

05 Dec 2005      README files in tests upgraded (BB).

04 Dec 2005      Optional IERR argument passed to mat_sv routines to give to
                 possibility of a direct management of the error. Changes to
                 inversions in transport. References for test04 ans test05 updated. (AF)

02 Dec 2005      Test04 (Guanine dipole moment) added; porting issues on MAC tackled. 
                 (AF)

01 Dec 2005      README files in tests upgraded (BB). 
                 Changes in the fmt of output files in order to enhance check 
                 procedure.  Updates also in utility/check.sh . 
                 References in tests updated (using espresso v3.0). (AF)

30 Nov 2005      Bug fixed in xsf output format (plot.x). (AF)
